Pull request #72: fix popup height
Merge in EXTENSIONS/browser-extension-v3 to master

Squashed commit of the following:

commit b36fbfb89085e3684aa073ecd4262f61e8b5330d
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon May 23 13:01:59 2022 +0300

    AG-14227 fix popup height

--- a/src/popup/components/PopupApp/PopupApp.module.pcss
+++ b/src/popup/components/PopupApp/PopupApp.module.pcss
@@ -2,7 +2,8 @@
     width: 100%;
     height: 100%;
     min-width: 32rem;
-    min-height: 38rem;
+    /* minimum height for welcome slides */
+    min-height: 48rem;
     overflow: hidden;
     display: flex;
     justify-content: flex-start;
